@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.watchmojo" name="Watchmojo" provider-name="willforde" version="2.1.0">
+<addon id="plugin.video.watchmojo" name="Watchmojo" provider-name="willforde" version="2.1.1">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0"/>
 		<import addon="script.module.xbmcutil" version="3.0.0"/>
