@@ -1,3 +1,6 @@
+[B]Version 2.1.1[/B] 2017-03-16
+- Fix addon after more site changes
+
 [B]Version 2.1.0[/B] 2017-02-10
 - Fix addon after site redesign
 
